--- a/.github/workflows/aws_test.yml
+++ b/.github/workflows/aws_test.yml
@@ -1,32 +1,15 @@
 ---
 name: AWS S3 List Buckets
 
-on:
-  # Allow manual trigger
-  workflow_dispatch:
+on: [workflow_dispatch]
 
 jobs:
   list-s3-buckets:
     runs-on: ubuntu-latest
-    
-    # Use the same Docker image as Jenkins
-    #container:
-    #  image: amazon/aws-cli:latest
-    #  options: --entrypoint=""
-    
-    # Grant GITHUB_TOKEN write permissions for OIDC
     permissions:
-      id-token: write
       contents: read
     
     steps:
-      #- name: Configure AWS credentials
-      #  uses: aws-actions/configure-aws-credentials@v4
-      #  with:
-      #    role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-      #    role-session-name: GitHubActions
-      #    aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-      
       - name: Get current buckets
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
