--- a/.github/workflows/aws_test-oidc.yml
+++ b/.github/workflows/aws_test-oidc.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
           role-session-name: GitHubActions
-          aws-region: 
+          aws-region: "eu-west-1"
 
       - name: Get current buckets
         run: |
