--- a/.github/workflows/aws_test-oidc.yml
+++ b/.github/workflows/aws_test-oidc.yml
@@ -11,6 +11,11 @@ jobs:
       id-token: write
     
     steps:
+      - name: Debug OIDC Claims
+        uses: github/actions-oidc-debugger@main
+        with:
+          audience: sts.amazonaws.com
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
