--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,14 @@ name: Java CI with Maven
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '.github/**'
+      - 'terraform/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '.github/**'
+      - 'terraform/**'
 
 jobs:
   build:
@@ -15,14 +21,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+
+    - name: Create jar
       run: mvn -B package --file pom.xml
+
     - name: Build the Docker image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
